[package]
name = "frp-loom"
version = "0.1.0"
edition = "2024"
description = "Storage traits and in-memory implementations for the frp graph layer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joneseysinno/frp-loom.git"
documentation = "https://docs.rs/frp-loom"
keywords = ["graph", "storage", "store", "frp", "infinite-db"]
categories = ["data-structures"]

[dependencies]
frp-plexus = { version = "0.1.0", path = "../frp-plexus" }
thiserror = { workspace = true }

[features]
in-memory = []

